--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@ $(function() {
 <div class="contents">
 <div class="textblock"><p><a href="https://github.com/dimi309/small3d">small3d</a>'s latest changes are listed below. The source code is always available on <a href="https://github.com/dimi309/small3d">GitHub</a>.</p>
 <h2>v1.2.0 </h2>
-<p>(still open)</p>
 <ul>
 <li>Conan and cppan packaging configuration files have been removed from the repository. The conan configuration has been moved to the <a href="https://github.com/dimi309/conan-packages">repository containing my other conan contributions</a>.</li>
 <li>The documentation has been reorganised into a single README file.</li>
 <li>The tutorial that was part of the README file has been moved to <a href="https://github.com/dimi309/small3d-tutorial">its own repository</a>, together with the sample games.</li>
 <li>[BREAKING] Dropped support for SDL. Only using GLFW now. (I've changed my mind about keeping SDL since v1.1.0. Sorry...)</li>
+<li>Bug fixes and improvements for cross-platform compilation. Tested on Windows, MacOS, Debian and Fedora.</li>
+<li>Improvement of "manual" building instructions.</li>
 </ul>
 <h2>v1.1.1 </h2>
 <ul>
