--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ $(function() {
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><p><a href="https://github.com/dimi309/small3d">small3d</a>'s latest changes are listed below. The source code is always available on <a href="https://github.com/dimi309/small3d">GitHub</a>.</p>
+<h2>v1.2.1 </h2>
+<p>(still open)</p>
+<ul>
+<li>Various bug fixes and code improvements.</li>
+<li>[BREAKING] The Renderer and SoundPlayer classes are now singletons.</li>
+</ul>
 <h2>v1.2.0 </h2>
 <ul>
 <li>Conan and cppan packaging configuration files have been removed from the repository. The conan configuration has been moved to the <a href="https://github.com/dimi309/conan-packages">repository containing my other conan contributions</a>.</li>
