--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ $(function() {
 <ul>
 <li>Various bug fixes and code improvements.</li>
 <li>[BREAKING] The Renderer and SoundPlayer classes are now singletons.</li>
-<li>[BREAKING] I will no longer be maintaining builds that don't use conan. Conan saves time.</li>
+<li>[BREAKING] Conan packaging configuration re-introduced. I will no longer be maintaining builds that don't use conan. Conan saves time.</li>
+<li>[BREAKING] The Exception class has been removed. Now using std::runtime_error instead.</li>
 </ul>
 <h2>v1.2.0 </h2>
 <ul>
