--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ $(function() {
 <li>[BREAKING] Conan packaging configuration re-introduced. I will no longer be maintaining builds that don't use conan. Conan saves time.</li>
 <li>[BREAKING] The Exception class has been removed. Now using std::runtime_error instead.</li>
 <li>[BREAKING] The SoundPlayer class has been removed. The new Sound class allows for very simple loading and playing of sounds.</li>
+<li>[BREAKING] The Renderer.generateTexture function now takes an Image as parameter in place of raw data and dimension details.</li>
 </ul>
 <h2>v1.2.0 </h2>
 <ul>
