--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ $(function() {
 <li>New rendering functions for scene objects and models added.</li>
 <li>[BREAKING] Renderer functions that render a SceneObject now require the colour or the object texture name to be passed as parameters. The texture of the SceneObject has to have been generated beforehand.</li>
 <li>[BREAKING] Rotation adjustment functionality removed from SceneObject. Models have to be created already oriented towards the correct direction (-z).</li>
+<li>[BREAKING] Renderer.renderSurface and Renderer.renderTexture united in polymorphic Renderer.renderRectangle function.</li>
 </ul>
 <h2>v1.2.0 </h2>
 <ul>
