--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@ $(function() {
 <ul>
 <li>Various bug fixes and code improvements.</li>
 <li>Using GLEW 2.1.0.</li>
-<li>Added support for MinGW.</li>
+<li>Added MinGW support.</li>
+<li>Removed Renderer.supportsOpenGL33 function.</li>
+<li>Adding Vulkan support.</li>
 </ul>
 <h2>v1.3.0 </h2>
 <ul>
