--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@ $(function() {
 <li>Various bug fixes and code improvements.</li>
 <li>Using GLEW 2.1.0.</li>
 <li>Added MinGW support.</li>
-<li>Removed Renderer.supportsOpenGL33 function.</li>
-<li>Adding Vulkan support.</li>
+<li>[BREAKING] Removed Renderer.supportsOpenGL33 function.</li>
 </ul>
 <h2>v1.3.0 </h2>
 <ul>
